<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionBarBk"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/webview_title_bg">

        <TextView
            android:id="@+id/titleLeft_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@mipmap/back"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/more" />
        </LinearLayout>


        <TextView
            android:id="@+id/titleCeneter_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_network_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_network" />

            <TextView
                android:id="@+id/reload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gray_corner_home"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reload"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tencent.smtt.sdk.WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@mipmap/refresh"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/refresh" />

            <View
                android:layout_width="70dp"
                android:layout_height="0.5dp"
                android:background="@color/gray_line" />

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@mipmap/close"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/close" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>